crates/polylint-core/tests/snapshots/report__format_pretty.snap
---
source: crates/polylint-core/tests/report.rs
expression: text
---
reformatted src/main.py

1 changed of 2 file(s)
