crates/polylint-core/tests/snapshots/report__format_pretty_dry_run.snap
---
source: crates/polylint-core/tests/report.rs
expression: text
---
would reformat src/main.py

1 file(s) will change of 2 file(s)
