crates/polylint-core/tests/snapshots/report__lint_pretty_fixable.snap
---
source: crates/polylint-core/tests/report.rs
expression: text
---
src/main.py
  warning  ruff  F401  1:1  unused import
  error  ruff  syntax error

2 issue(s) found.
1 fixable with the `--fix` option.
