crates/polylint-core/tests/snapshots/report__lint_toon.snap
---
source: crates/polylint-core/tests/report.rs
expression: toon
---
[2]:
  - path: src/main.py
    diagnostics[2]:
      - engine: ruff
        code: E501
        severity: warning
        message: line too long
        span:
          start_line: 12
          start_col: 80
          end_line: 12
          end_col: 95
        metadata:
          category: style
          url: "https://example.test/rules/E501"
      - engine: ruff
        severity: error
        message: syntax error
        span:
          start_line: 1
          start_col: 1
          end_line: 1
          end_col: 1
  - path: src/clean.py
    diagnostics[0]:
